# SurfSifter

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  agents.md  conftest.py  pyproject.toml  pytest.ini
.github/workflows/: release.yml  test.yml  wiki-sync.yml
config/: config.yml  settings.defaults.json  settings.json
docs/: compatibility.md
docs/compliance/: COMPLIANCE.md  LICENSES.md
docs/developper/: extractor_warning_support.md
docs/schemas/: image_carving_manifest.schema.json
docs/wiki/: Home.md  Home_github.md  _Sidebar.md  _Sidebar_github.md  case.md
docs/wiki/extractors/: AGENT_INSTRUCTIONS.md  README.md  carvers.md  chromium.md  firefox.md  ie-legacy.md  media.md  safari.md  system.md
docs/wiki/features/: README.md
docs/wiki/general/: Exports.md  Settings.md  evidence-and-cases.md  external-tools.md  install.md  overview.md  quick-start.md  troubleshooting.md  workflow-and-behavior.md
docs/wiki/reports/: README.md  appendix.md  modules.md
packaging/: linux.spec  windows.spec
reference_lists/: README.md  known_extensions.yml
reference_lists/filelists/: browser_artifacts.txt  deepfreeze.txt  system_cleaners.txt  temp_locations.txt
reference_lists/hashlists/: sample.txt
reference_lists/urllists/: README.md  sample_demo.txt
scripts/: clean.sh  gen-sbom.sh  generate_branding.py  install.sh
src/: run.py
src/app/: __init__.py  main.py
src/app/common/: __init__.py  sandbox_helpers.py
src/app/config/: __init__.py  settings.py  text_blocks.py
src/app/data/: __init__.py  _base.py  _case.py  _downloads.py  _evidence.py  _images.py  _indicators.py  _tags.py  _timeline.py  _urls.py  case_data.py
src/app/features/: __init__.py
src/app/resources/: __init__.py
src/app/services/: __init__.py  matching_workers.py  net_download.py  thumbnailer.py  workers.py
src/core/: __init__.py  app_version.py  audit_logging.py  config.py  enums.py  evidence_fs.py  export.py  extraction_orchestrator.py  extractor_sections.py  file_classifier.py  hashing.py  image_codecs.py  import_case.py  logging.py  manifest.py  phash.py  process_log_service.py  statistics_collector.py  timestamps.py  tool_discovery.py  tool_registry.py  validation.py
src/core/database/: __init__.py  compat.py  connection.py  manager.py
src/core/matching/: __init__.py  file_matcher.py  hash_db.py  manager.py  url_matcher.py
src/extractors/: __init__.py  base.py  browser_patterns.py  callbacks.py  exceptions.py  extractor_registry.py  image_signatures.py  widgets.py  workers.py
src/extractors/_shared/: __init__.py  appid_loader.py  appids.json  extracted_files_audit.py  extraction_warnings.py  file_list_discovery.py  known_extensions.py  leveldb_wrapper.py  path_utils.py  risk_classifier.py  sqlite_helpers.py  timestamps.py
src/extractors/browser/: __init__.py
src/extractors/carvers/: __init__.py
src/extractors/media/: __init__.py
src/extractors/system/: __init__.py
src/reports/: __init__.py  dates.py  generator.py  locales.py  paths.py
src/reports/appendix/: __init__.py  base.py  registry.py
src/reports/database/: __init__.py  appendix_helpers.py  helpers.py  module_helpers.py  settings_helpers.py
src/reports/modules/: __init__.py  base.py  registry.py
src/reports/templates/: __init__.py  appendix_report.html  base_report.html
src/reports/ui/: __init__.py  collapsible_group.py  module_picker.py  report_tab_widget.py  section_card.py  (+1 more)
src/sdk/: __init__.py  base.py  records.py
tests/: README.md  conftest.py  test_screenshots.py
tests/app/: test_app_models.py  test_cache_index_ui.py  test_unified_tagging_models.py
tests/compat/: test_extractor_aliases.py
tests/core/: test_audit_logging.py  test_autofill_enhancements.py  test_autofill_ibans.py  test_batch_operations.py  test_browser_inventory_migration.py  test_database_manager.py  test_database_path_logging.py  test_db.py  test_db_connection_caching.py  test_db_helpers.py  test_db_schema_validator.py  test_enums.py  test_evidence_db_guards.py  test_evidence_fs.py  test_export.py  test_extracted_files.py  test_extraction_config.py  test_extraction_warnings.py  test_file_classifier.py  test_file_list_schema.py  test_file_list_tagging.py  test_firefox_cache_index_helpers.py  test_image_carving_manifest_schema.py  test_image_dedup.py  test_import.py  test_import_namespace.py  test_migration_0005.py  test_migration_images_dedup.py  test_per_source_urls.py  test_phash_optimization.py  test_process_log_service.py  test_rebrand.py  test_reference_lists.py  test_timestamps.py  test_tool_discovery.py  test_tool_registry.py  test_url_domain_extraction.py  test_url_matcher.py  test_urls_tagging.py  test_validation.py
tests/extractors/: __init__.py  test_bulk_extractor.py  test_cache_blockfile_parser.py  test_downloads_data.py  test_extraction_warnings_utils.py  test_extractor_contracts.py  test_extractor_mapping_compat.py  test_extractor_tool_requirements.py  test_folder_structure.py  test_image_signatures.py  test_leveldb_wrapper.py  test_registry_discovery.py  test_shared_utils.py
tests/fixtures/: README.md  db.py  helpers.py  test_patterns.txt  test_simple_patterns.txt
tests/gui/: conftest.py  test_batch_operations_qt.py  test_sandbox_browser.py
tests/integration/: test_image_extraction_enhancements.py  test_url_discovery_integration.py
tests/reports/: test_browser_downloads_module.py  test_collapsible_group.py  test_custom_report_sections.py  test_dates.py  test_heif_thumbnail_integration.py  test_image_list_optimization.py  test_localization.py  test_registry_exports.py  test_report_generator.py  test_report_modules.py  test_report_settings.py  test_system_summary_module.py  test_tagged_file_list_module.py  test_timeline_report_modules.py
(+734 files in other folders)
